[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UserInterface.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1, 1, 20 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=4]
height = 3.0

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -14.0945, 0, -15.9006, 0, 0, 0, 0, 0, 0, 14.0934, 0, -16.0599, 0, 0, 0, 0, 0, 0, 14, 0, 16, 0, 0, 0, 0, 0, 0, -13.9353, 0, 16.2686, 0, 0, 0, 0, 0, 0, -14.0945, 0, -15.9006 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="GDScript" id=6]
script/source = "extends Timer

func _ready():
	pass # Replace with function body.

"

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )

[node name="Walls" type="Spatial" parent="."]

[node name="StaticBody" type="StaticBody" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.8, 0, 0 )
collision_layer = 4

[node name="CollisionShape" type="CollisionShape" parent="Walls/StaticBody"]
shape = SubResource( 9 )

[node name="StaticBody2" type="StaticBody" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.7, 0, 0 )
collision_layer = 4

[node name="CollisionShape" type="CollisionShape" parent="Walls/StaticBody2"]
shape = SubResource( 9 )

[node name="StaticBody3" type="StaticBody" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.38419e-07, 0, 15.9 )
collision_layer = 4

[node name="CollisionShape" type="CollisionShape" parent="Walls/StaticBody3"]
shape = SubResource( 9 )

[node name="StaticBody4" type="StaticBody" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.31134e-06, 0, -13.7 )
collision_layer = 4

[node name="CollisionShape" type="CollisionShape" parent="Walls/StaticBody4"]
shape = SubResource( 9 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 25, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19 )
projection = 1
size = 19.0

[node name="Cylinders" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, -16 )
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -16 )
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, 16 )
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 16 )
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 5 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.0945, 0, -15.9006 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
script = SubResource( 6 )

[node name="UserInterface" parent="." instance=ExtResource( 4 )]
